--- a/src/styles/components/_todo-component.scss
+++ b/src/styles/components/_todo-component.scss
@@ -60,9 +60,17 @@
 
 		}
 
+		&-form {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			align-items: center;
+		}
+
 		&-input {
 			width: 100%;
 			height: 100%;
+			flex: 1;
 			outline: none;
 			border: none;
 			font-size: inherit;
