work on readme file

--- a/src/styles/pages/_home-page.scss
+++ b/src/styles/pages/_home-page.scss
@@ -11,7 +11,7 @@
 	z-index: 1;
 
 	&--light-mode {
-		background-color: $bg-light-primary;
+		background: $bg-light-secondary;
 		color: $text-primary-light;
 
 		& .todo-component__create-container, .todo-item, .footer-component {
