--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -2,6 +2,7 @@
 $bg-dark-primary: #171823;
 $bg-dark-secondary: #25273D;
 $bg-light-primary: #FAFAFA;
+$bg-light-secondary: linear-gradient(180deg, #b0b0b0, #ffffff);
 
 // Text Colors:
 // - Dark Mode:
